<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/nav_receiver"
            android:icon="@drawable/ic_action_receiver"
            android:title="@string/receiver_item_nav" />
        <item
            android:id="@+id/nav_sender_own"
            android:icon="@drawable/ic_action_sender"
            android:title="@string/delivery_own_item_nav" />
        <item
            android:id="@+id/nav_sender_other"
            android:icon="@drawable/ic_action_sender"
            android:title="@string/delivery_other_nav" />
        <item
            android:id="@+id/nav_maturities"
            android:icon="@drawable/ic_action_maturities"
            android:title="@string/maturities_item_nav" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
