<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".navigationmain.ui.NavigationMainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonReceiverCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button_main"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/receiver_item_nav"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonDeliveryOwnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button_main"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/delivery_own_item_nav"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonDeliveryOtherCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button_main"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/delivery_other_nav"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonMaturities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_button_main"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/maturities_item_nav"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearButtons"
        android:layout_margin="10dp"
        android:background="@drawable/shape_rect_solid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Cant. de cheques recibos:" />

                    <TextView
                        android:id="@+id/quantity_addCheck_text_"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="--" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Total cheques recibos:" />

                    <TextView
                        android:id="@+id/total_addCheck_text_"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="$ --" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Vencen ésta semana: " />

                    <TextView
                        android:id="@+id/quantity_addCheck_expiration_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="--" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Monto que vence ésta semena :" />

                    <TextView
                        android:id="@+id/total_addCheck_expiration_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="$ --" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="1dp"
                android:background="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Cant. de cheques propios entregados:" />

                    <TextView
                        android:id="@+id/quantity_ownCheck_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="--" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Total cheques propios entregados:" />

                    <TextView
                        android:id="@+id/total_ownCheck_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="$ --" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Vencen ésta semana: " />

                    <TextView
                        android:id="@+id/quantity_ownCheck_expiration_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:text="--" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:text="Monto que vence ésta semena: "
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/total_ownCheck_expiration_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="$ --" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
